--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* ===== CURTAIN REVEAL (MOBILE SAFE) ===== */
 .curtain-wrap {
   position: fixed;
@@ -321,6 +322,10 @@
   100% { opacity: 0.6; }
 }
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
